First version of the additional notes.
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@12689 4525493e-7705-40b1-a816-d608a930855b

--- a/2013/1km paper/bibliography.tex
+++ b/2013/1km paper/bibliography.tex
@@ -114,6 +114,11 @@
 	%University of Manchester, 2008
 	%Reconstruction of Protons in the TOTEM Roman Pot Detectors at the LHC
 
+\bibitem{todesco-lpc}
+	\Name{E.~Todesco}
+	presentation in the LPC Meeting on 27 June 2016,
+	\url{https://indico.cern.ch/event/541101/contributions/2197629/attachments/1298782/1937817/et\_1606\_energy.pdf}
+
 \bibitem{lafferty94}
 	\Name{G.~D.~Lafferty and T.~R.~Wyatt}
 	\Review{Nucl.~Instrum.~Meth.}{A 355}{1995}{541}.
@@ -228,3 +233,16 @@
 \bibitem{pdg} 
 	\Name{K.~Nakamura \etal{}~(Particle Data Group)}
 	\Review{J.~Phys.}{G37}{2010}{075021}.
+
+% TODO: move to correct place
+\bibitem{alfa-7tev}
+	\Name{TODO},
+	bla
+
+\bibitem{alfa-8tev}
+	\Name{TODO},
+	bla
+
+\bibitem{block16}
+	\Name{M.~M.~Block, L.~Durand, P.~Ha and F~.Halzen}
+	\Review{Phys.~Rev.~D}{93}{2016}{114009}
