--- a/2013/1km paper/conclusions.tex
+++ b/2013/1km paper/conclusions.tex
@@ -17,4 +17,11 @@ The $\rho$ parameter was for the first time at LHC extracted via the Coulomb-nuc
 
 The new total cross-section determination is conceptually more accurate than in all previous LHC publications since the CNI effects are explicitly treated. Moreover, the value of $\rho$ comes from the same analysis, not from an external source, which underlines consistency. The $\sigma_{\rm tot}$ values are very well consistent among all non-excluded fits and compatible with the previous measurements. As expected, the new determination yields slightly greater values relative to previous results where the negative CNI was not taken into account. Also note that if the SWY formula with purely exponential hadronic modulus are used, the total cross-section is underestimated by about $1\un{mb}$.
 
+% TODO: remove
+\newpage
+\hbox{}
+\newpage
+
+The total cross-section measurements by the ATLAS\Break ALFA collaboration are systematically lower, both at $\sqrt s = 7$ \cite{alfa-7tev} and $8\un{TeV}$ \cite{alfa-8tev}. Also, ATLAS ALFA concludes that no statement on deviations of the differential cross-section from a pure exponential can be made \cite{alfa-8tev}. Figure 6 in \cite{block16} shows, however, that the $7\un{TeV}$ data by ATLAS ALFA are qualitatively similar to the non-exponential behaviour shown in Figures~\ref{fig:fit exp1}, \ref{fig:fit exp3} and earlier in \cite{8tev-90m}. The same stament can be made for the $8\un{TeV}$ data by ATLAS ALFA. The leading systematic uncertainty in \cite{alfa-8tev} is due to the uncertainty of the beam momentum. With respect to the arguments in Section~\ref{sec:systematics} ATLAS ALFA overestimates this contribution. Irrespective of that, this contribution cannot alter between exponential and non-exponential behaviours as its relative effect is linear in $|t|$, see consistently Figure 3.~(a) in \cite{alfa-8tev} and Figure~\ref{fig:syst unc}. \cite{block16} argues that the value of $\sigma_{\rm tot}$ determined by ATLAS ALFA would increase if the non-exponentiality was taken into account.
+
 For even stronger results in the future the key point is a better distinction between the nuclear and CNI cross-section components, which can be achieved from both theoretical and experimental sides. New theory developments may narrow down the range of allowed parametrisations of the nuclear modulus and phase or better constrain the induced CNI effects. The experimental improvements include increasing statistics and reducing the lower $|t|$ threshold. For the former, TOTEM has already upgraded the RP mechanics such that both vertical pots can be simultaneously placed very close to the beam. For the latter, TOTEM foresees an optics with extremely high $\beta^* \approx 2500\un{m}$ which would allow to reach the CNI region even at Run II energies. Moreover, recent experience with the $\beta^* = 90\un{m}$ optics at $\sqrt s = 13\un{TeV}$ shows that very low beam emittances can be achieved, thus possibly further reducing the RP distance from the beam.
