--- a/2013/1km paper/differential_cross_section.tex
+++ b/2013/1km paper/differential_cross_section.tex
@@ -350,7 +350,7 @@ At very low $|t|$, where the cross-section varies the fastest ($\approx 0.001\un
 \subsubsection{Systematic Uncertainties}
 \label{sec:systematics}
 
-Besides the systematic uncertainties mentioned at the above analysis steps, the beam momentum uncertainty of $0.1\un{\%}$ (cf.~Section 5.2.8 in \cite{8tev-90m}) needs to be considered when the scattering angles are translated to $t$, see Eq.~(\ref{eq:th t}).
+Besides the systematic uncertainties mentioned at the above analysis steps, the beam momentum uncertainty needs to be considered when the scattering angles are translated to $t$, see Eq.~(\ref{eq:th t}). The uncertainty was estimated to $0.1\un{\%}$ in Section 5.2.8 in \cite{8tev-90m} which is further supported by a recent review \cite{todesco-lpc}.
 
 Two different methods are used to propagate the systematic effects into the $t$-distribution. The first is based on a Monte-Carlo simulation which uses a fit of the final differential cross-section data to generate the true $t$-distribution. In parallel, another $t$-distribution is built, introducing one of the above mentioned systematic effects at $1\un{\sigma}$ level. The difference between the two $t$-distributions gives the systematic effect on the differential cross-section. The second method is similar, however using numerical integration techniques instead of Monte-Carlo simulations. Both methods are formally equivalent to evaluating
 \begin{equation}
