Second version of the additional points.
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@12690 4525493e-7705-40b1-a816-d608a930855b

--- a/2013/1km paper/differential_cross_section.tex
+++ b/2013/1km paper/differential_cross_section.tex
@@ -409,3 +409,5 @@ Impact of $t$-dependent systematic effects on the differential cross-section. Ea
 \label{fig:syst unc}
 \end{center}
 \end{figure*}
+
+Let us emphasize that the systematic effects with linear $t$ dependence (see Figure~\ref{fig:syst unc}) cannot alter the non-purely-exponential character of the data. This is the case for the effects of normalisation, beam momentum and to a large degree also of optics-mode 2. For the beam momentum, this can also be understood analytically: changing the value of $p$ would yield a scaling of $t$, see Eq.~(\ref{eq:th t}), and consequently also scaling of the $b_n$ parameters in Eq.~(\ref{eq:nuc mod}). However, the non-zero $b_2, b_3$ etc.~parameters (reflecting the non-exponentiality) cannot be brought to $0$ (as in purely-exponential case).
