Introduction of peripheral phase rephrased.
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@12699 4525493e-7705-40b1-a816-d608a930855b

--- a/2013/1km paper/bibliography.tex
+++ b/2013/1km paper/bibliography.tex
@@ -166,6 +166,11 @@
 	%title={An impact parameter analysis of proton-proton elastic and inelastic interactions at 360 GeV/c}
 	%url={http://dx.doi.org/10.1007/BF01442063}
 
+\bibitem{pk16}
+	\Name{J.~Proch\'azka and V.~Kundr\'at}
+	Eikonal model analysis of elastic hadron collisions at high energies,
+	arXiv:1606.09479 (2016).
+
 \bibitem{klk02}
 	\Name{V.~Kundr\' at, M.~Lokaj\' i\v cek and D.~Krupa}
 	\Review{Phys.~Lett.~B}{544}{2002}{132 -- 138}.
@@ -236,4 +241,4 @@
 
 \bibitem{block16}
 	\Name{M.~M.~Block, L.~Durand, P.~Ha and F~.Halzen}
-	\Review{Phys.~Rev.~D}{93}{2016}{114009}
+	\Review{Phys.~Rev.~D}{93}{2016}{114009}.
