--- a/2013/1km paper/coulomb.tex
+++ b/2013/1km paper/coulomb.tex
@@ -95,18 +95,20 @@ where $t_{\rm d} \approx -0.53\un{GeV^2}$ gives the position of the diffractive 
 
 % ***
 \item[d)]
-The {\bf peripheral phase} \cite{kl94} provides an alternative to the above descriptions since it may yield a very different picture in the impact-parameter space. As shown in Figure~\ref{fig:phase illustration}, the parametrisation
+Another parametrisation was proposed in \cite{kl94}:
 \begin{equation}
 \label{eq:nuc phase per}
-\arg {\cal A}^{\rm N}(t) = {\pi\over 2} - \arctan\rho - \zeta_1 \left(- {t\over 1\un{GeV^2}} \right)^\kappa \e^{\nu t}
+\arg {\cal A}^{\rm N}(t) = {\pi\over 2} - \arctan\rho - \zeta_1 \left(- {t\over 1\un{GeV^2}} \right)^\kappa \e^{\nu t}\ .
 \end{equation}
-can have a rapid variation at low $|t|$, then peaks at $t = -\kappa / \nu$ and asymptotically returns to its value at $t=0$. A set of reasonable parameter values at $\sqrt s = 8\un{TeV}$ are
+As shown in Figure~\ref{fig:phase illustration}, it features a peak at $t = -\kappa / \nu$ and for asymptotically increasing $|t|$ it returns to its value at $t=0$. Due to a potentially rapid variation at low $|t|$, this phase may yield a qualitatively different impact-parameter-space behaviour from the above parametrisations. In order to ensure fit stability the following parameters
 \begin{equation}
 \label{eq:nuc phase per val}
-	\zeta_1 = 800\ ,\qquad
-	\kappa = 2.311\ ,\qquad
+	\zeta_1 = 800\ ,\quad
+	\kappa = 2.311\ ,\quad
 	\nu = 8.161\un{GeV^{-2}}\ .
 \end{equation}
+have been fixed to values maintaining the desired impact-parameter behaviour at $\sqrt s = 8\un{TeV}$ \cite{pk16}. This parametrisation with one free parameter will be denoted as {\bf peripheral phase} in what follows.
+
 \end{enumerate}
 
 \begin{figure*}
