Correction to the PK reference.
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@12700 4525493e-7705-40b1-a816-d608a930855b

--- a/2013/1km paper/coulomb.tex
+++ b/2013/1km paper/coulomb.tex
@@ -107,7 +107,7 @@ As shown in Figure~\ref{fig:phase illustration}, it features a peak at $t = -\ka
 	\kappa = 2.311\ ,\quad
 	\nu = 8.161\un{GeV^{-2}}\ .
 \end{equation}
-have been fixed to values maintaining the desired impact-parameter behaviour at $\sqrt s = 8\un{TeV}$ \cite{pk16}. This parametrisation with one free parameter will be denoted as {\bf peripheral phase} in what follows.
+have been fixed to values maintaining the desired impact-parameter behaviour at $\sqrt s = 8\un{TeV}$, using a method detailed in \cite{pk16}. This parametrisation with one free parameter will be denoted as {\bf peripheral phase} in what follows.
 
 \end{enumerate}
 
