Background estimate section rephrased.
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@12701 4525493e-7705-40b1-a816-d608a930855b

--- a/2013/1km paper/coulomb.tex
+++ b/2013/1km paper/coulomb.tex
@@ -65,7 +65,7 @@ The following phase parametrisations are considered.
 A {\bf constant phase} is obviously the simplest choice:
 \begin{equation}
 \label{eq:nuc phase con}
-\arg {\cal A}^{\rm N}(t) = {\pi\over 2} - \arctan\rho = \hbox{const} \quad .
+\arg {\cal A}^{\rm N}(t) = {\pi\over 2} - \arctan\rho = \hbox{const} \ .
 \end{equation}
 It leads to a strict proportionality between the real and the imaginary part of the amplitude at all $t$.
 %This parametrisation is not compatible with Martin's theorem \cite{martin97} stating that, under some assumptions, the real part of an even-signature scattering amplitude must change sign at low $|t|$.
