British spelling of millimetre.
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@12702 4525493e-7705-40b1-a816-d608a930855b

--- a/2013/1km paper/experimental_apparatus.tex
+++ b/2013/1km paper/experimental_apparatus.tex
@@ -23,7 +23,7 @@ forward tracking telescopes T1 and T2.
 A complete description of the TOTEM detector instrumentation 
 and its performance is given in~\cite{totem-jinst} and~\cite{totem-ijmp}. 
 The data analysed here come from the RPs only. An RP is a movable beam-pipe
-insertion capable of approaching the LHC beam to a distance of less than a millimeter, in 
+insertion capable of approaching the LHC beam to a distance of less than a millimetre, in 
 order to detect protons with scattering angles of only a few microradians. 
 The proton spectrometer is organised in two RP stations: one on the left side of the IP 
 (LHC sector 45) and one on the right (LHC sector 56), see Figure~\ref{fig:rpsketch} (left).
