Figures resized for better formatting.
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@12704 4525493e-7705-40b1-a816-d608a930855b

--- a/2013/1km paper/coulomb.tex
+++ b/2013/1km paper/coulomb.tex
@@ -250,7 +250,7 @@ The goal of this section is to test whether the data are compatible with a purel
 
 \begin{table*}
 \caption{Fit results with $N_b=1$. Each column corresponds to a fit with different interference formula and/or nuclear phase.}
-%\vskip-3mm
+\vskip-2mm
 \label{tab:fit exp1}
 \begin{center}
 \setlength\tabcolsep{2.5mm}
@@ -312,7 +312,7 @@ Fig.~\ref{fig:fit exp3} shows that the level of Coulomb-induced effects is very 
 
 \begin{table*}
 \caption{Fit results with Cahn or KL formula and $N_b=3$.}
-%\vskip-3mm
+\vskip-2mm
 \label{tab:fit exp3}
 \begin{center}
 \setlength\tabcolsep{5mm}
