--- a/2013/1km paper/data_taking.tex
+++ b/2013/1km paper/data_taking.tex
@@ -12,7 +12,7 @@ and no collimator producing showers by touching the beam, the RPs at
 $3\,\sigma_{y}$ were operated in a background-depleted environment for about one 
 hour until the beam-to-collimator gap was refilled by diffusion, as 
 diagnosed by the increasing RP trigger rate (Figure~\ref{fig:overview}). When the background conditions
-had deteriorated to an unacceptable level, the beam cleaning procedure was repeated, again followed by a quiet data-taking period. The beam cleaning at $1.5\un{h}$ from the run beginning employed only vertical collimators and led to a quickly increasing background rate, see Figure~\ref{fig:overview}. Therefore, the following beam cleaning operations were also performed in the horizontal plane. Altogether there were 6 beam cleaning interventions until the luminosity had decreased from initially $1.8\times10^{27}\,\rm cm^{-2}s^{-1}$ to 
+had deteriorated to an unacceptable level, the beam cleaning procedure was repeated, again followed by a quiet data-taking period. The beam cleaning at $1.5\un{h}$ from the beginning of the run employed only vertical collimators and led to a quickly increasing background rate, see Figure~\ref{fig:overview}. Therefore, the following beam cleaning operations were also performed in the horizontal plane. Altogether there were 6 beam cleaning interventions until the luminosity had decreased from initially $1.8\times10^{27}\,\rm cm^{-2}s^{-1}$ to 
 $0.4\times10^{27}\,\rm cm^{-2}s^{-1}$
 at which point the data yield was considered as too low. 
 During the 9 hour long fill, an integrated luminosity of $20\,\rm \mu b^{-1}$ 
@@ -31,7 +31,7 @@ The horizontal RPs were only needed for the data-based alignment and therefore p
 \includegraphics{fig/trigger_rate.pdf}
 %\vskip-3mm
 \caption{%
-Trigger rates as a function of time from the beginning of the run. The T2 rate (blue) is roughly proportional to luminosity, while the RP rate (red) is in addition sensitive to beam-halo level. The yellow bands represent periods of uninterrupted data taking.
+Trigger rates as a function of time from the beginning of the run (24 October 2012, 23:00 h). The T2 rate (blue) is roughly proportional to luminosity, while the RP rate (red) is in addition sensitive to beam-halo level. The yellow bands represent periods of uninterrupted data taking.
 }
 \label{fig:overview}
 \end{center}
