Quo usque tandem abutere patientia nostra ?
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@12713 4525493e-7705-40b1-a816-d608a930855b

--- a/2013/1km paper/coulomb.tex
+++ b/2013/1km paper/coulomb.tex
@@ -109,14 +109,14 @@ Another parametrisation was proposed in \cite{kl94}:
 \label{eq:nuc phase per}
 \arg {\cal A}^{\rm N}(t) = {\pi\over 2} - \arctan\rho - \zeta_1 \left(- {t\over 1\un{GeV^2}} \right)^\kappa \e^{\nu t}\ .
 \end{equation}
-As shown in Figure~\ref{fig:phase illustration}, it features a peak at $t = -\kappa / \nu$ and for asymptotically increasing $|t|$ it returns to its value at $t=0$. Due to a potentially rapid variation at low $|t|$, this phase may yield a qualitatively different impact-parameter-space behaviour from the above parametrisations. In order to ensure fit stability the following parameters
+As shown in Figure~\ref{fig:phase illustration}, it features a peak at $t = -\kappa / \nu$ and for asymptotically increasing $|t|$ it returns to its value at $t=0$. Due to a potentially rapid variation at low $|t|$, this functional form can yield an impact-parameter-space behaviour that is qualitatively different from the one obtained with the above parametrisations. In order to ensure fit stability, the parameters
 \begin{equation}
 \label{eq:nuc phase per val}
 	\zeta_1 = 800\ ,\quad
 	\kappa = 2.311\ ,\quad
-	\nu = 8.161\un{GeV^{-2}}\ .
+	\nu = 8.161\un{GeV^{-2}}
 \end{equation}
-have been fixed to values maintaining the desired impact-parameter behaviour at $\sqrt s = 8\un{TeV}$, using a method detailed in \cite{pk16}. This parametrisation with one free parameter will be denoted as {\bf peripheral phase} in what follows.
+have been fixed to example values maintaining the desired impact-parameter behaviour at $\sqrt s = 8\un{TeV}$, using a method detailed in \cite{pk16}. This parametrisation with one free parameter will be denoted as {\bf peripheral phase} in what follows.
 
 \end{enumerate}
 
