per aspera ad astra
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@12714 4525493e-7705-40b1-a816-d608a930855b

--- a/2013/1km paper/conclusions.tex
+++ b/2013/1km paper/conclusions.tex
@@ -15,6 +15,6 @@ The $\rho$ parameter was for the first time at LHC extracted via the Coulomb-nuc
 \rho = 0.12 \pm 0.03\ .
 \end{equation}
 
-The new total cross-section determination is conceptually more accurate than in all previous LHC publications since the CNI effects are explicitly treated. Moreover, the value of $\rho$ comes from the same analysis, not from an external source, which underlines consistency. The $\sigma_{\rm tot}$ values are very well consistent among all non-excluded fits and compatible with the previous measurements. As expected, the new determination yields slightly greater values relative to previous results where the negative CNI was not taken into account. Also note that if the SWY formula with purely exponential hadronic modulus are used, the total cross-section is underestimated by about $1\un{mb}$. A similar underestimation may occur if the non-exponentiality is not taken into account \cite{block16}.
+The new total cross-section determination is conceptually more accurate than in all previous LHC publications since the CNI effects are explicitly treated. Moreover, the value of $\rho$ comes from the same analysis, not from an external source, which underlines consistency. The $\sigma_{\rm tot}$ values are very well consistent among all non-excluded fits and compatible with the previous measurements. As expected, the new determination yields slightly greater values relative to previous results where the negative CNI was not taken into account. Also note that if the SWY formula with purely exponential hadronic modulus is used, the total cross-section is underestimated by about $1\un{mb}$. A similar underestimation may occur if the non-exponentiality is not taken into account~\cite{block16}.
 
 For even stronger results in the future the key point is a better distinction between the nuclear and CNI cross-section components, which can be achieved from both theoretical and experimental sides. New theory developments may narrow down the range of allowed parametrisations of the nuclear modulus and phase or better constrain the induced CNI effects. The experimental improvements include increasing statistics and reducing the lower $|t|$ threshold. For the former, TOTEM has already upgraded the RP mechanics such that both vertical pots can be simultaneously placed very close to the beam. For the latter, TOTEM foresees an optics with extremely high $\beta^* \approx 2500\un{m}$ which would allow to reach the CNI region even at Run II energies. Moreover, recent experience with the $\beta^* = 90\un{m}$ optics at $\sqrt s = 13\un{TeV}$ shows that very low beam emittances can be achieved, thus possibly further reducing the RP distance from the beam.
