Resubmitted to EPJ C.
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@12718 4525493e-7705-40b1-a816-d608a930855b

--- a/2013/1km paper/coulomb.tex
+++ b/2013/1km paper/coulomb.tex
@@ -196,10 +196,10 @@ By analysing Eqs.~(\ref{eq:int swy}), (\ref{eq:int cahn}) and (\ref{eq:int kl}),
 \label{sec:cni anal proc}
 
 In addition to using the data from Table~\ref{tab:data}, one might consider including the $\beta^* = 90\un{m}$ data \cite{8tev-90m} which benefit from much smaller uncertainties. However, due to the limited\Break reach, $|t| \gtrsim 0.03\un{GeV^2}$, they have essentially no sensitivity to the $\rho$ parameter, cf.~Fig.~\ref{fig:cni effect}. Furthermore, due to possible systematic tensions between the data sets, the inclusion of the $\beta^* = 90\un{m}$ data may have a deteriorating impact on the $\rho$ determination. Therefore, the value of $\rho$ was determined from the $\beta^* = 1000\un{m}$ data only. For other parameters to which both data sets have non-negligible sensitivity (e.g.~$b_i$ in Eq.~(\ref{eq:nuc mod})), both data sets should give compatible results. This was verified for all the fits that will be presented later on. Since the $\beta^* = 90\un{m}$ data yield much lower uncertainties, both data sets have been used for determining all parameters except $\rho$. In practice, a series of two fits was performed:
-\begin{enumerate}[leftmargin=2cm]
-\item[step 1:] fit of $\beta^* = 1000\un{m}$ data with $\rho$ free,
-\item[step 2:] fit of $\beta^* = 1000$ and $90\un{m}$ data with $\rho$ fixed from the preceding step.
-\end{enumerate}
+\begin{itemize}
+\item step 1: fit of $\beta^* = 1000\un{m}$ data with $\rho$ free,
+\item step 2: fit of $\beta^* = 1000$ and $90\un{m}$ data with $\rho$ fixed from the preceding step.
+\end{itemize}
 
 The standard least-squares method was used for all the fits. In particular, minimising
 \begin{equation}
