Tamas's institute renamed.
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@12817 4525493e-7705-40b1-a816-d608a930855b

--- a/2013/1km paper/authorlist_data.tex
+++ b/2013/1km paper/authorlist_data.tex
@@ -102,7 +102,7 @@
 	\AddInstitute{3a}{Helsinki Institute of Physics, Helsinki, Finland.}
 	\AddInstitute{3b}{Department of Physics, University of Helsinki, Helsinki, Finland.}
 	\AddInstitute{4a}{Wigner Research Centre for Physics, RMKI, Budapest, Hungary.}
-	\AddInstitute{4b}{KRF University College, Gy\"ongy\"os, Hungary.}
+	\AddInstitute{4b}{EKU KRC, Gy\"ongy\"os, Hungary.}
 	\AddInstitute{5a}{INFN Sezione di Bari, Bari, Italy.}
 	\AddInstitute{5b}{Dipartimento Interateneo di Fisica di Bari, Bari, Italy.}
 	\AddInstitute{5c}{Dipartimento di Ingegneria Elettrica e dell'Informazione - Politecnico di Bari, Bari, Italy.}
