Migration to git - step 1.

--- a/2016/0519 QCD at Cosmic Energies/jan_kaspar_totem_results.tex
+++ b/2016/0519 QCD at Cosmic Energies/jan_kaspar_totem_results.tex
@@ -450,7 +450,7 @@ $$\rh = \left. {\Re {\cal A}^{\rm N} / \Im {\cal A}^{\rm N}} \right|_{t=0}$$
 \>> \em{purely-exponential} -- non-exponentiality due to Coulomb (+interference)\\
 $\rightarrow$ $|{\cal A}^{\rm N}| = a\, \exp(b_1 t)$
 \>> \em{flexible enough} to describe non-exponentiality even without Coulomb\\
-$\rightarrow$ $|{\cal A}^{\rm N} = a\, \exp(b_1 t + b_2 t^2 + b_3 t^3)$
+$\rightarrow$ $|{\cal A}^{\rm N}| = a\, \exp(b_1 t + b_2 t^2 + b_3 t^3)$
 
 \vfil
 
