Migration to git - step 3.

--- a/2013/elegent/elegent.tex
+++ b/2013/elegent/elegent.tex
@@ -95,7 +95,7 @@ elastic nucleon-nucleon scattering \sep non-perturbative QCD models \sep nucleon
 {\em Program Title:} Elegent\\
 {\em Journal Reference:}\\ % Leave blank, supplied by Elsevier.
 {\em Catalogue identifier:}\\ % Leave blank, supplied by Elsevier.
-{\em Licensing provisions:} TODO\\ %enter "none" if CPC non-profit use license is sufficient.
+{\em Licensing provisions:} GPLv3\\ %enter "none" if CPC non-profit use license is sufficient.
 {\em Programming language:} C++\\
 {\em Computer:} any in principle, tested on x86-64 architecture\\
 {\em Operating system:} any in principle, tested on GNU/Linux\\
