--- a/2017/note_ctpps_2016_alignment/ctpps_2016_alignment_summary.tex
+++ b/2017/note_ctpps_2016_alignment/ctpps_2016_alignment_summary.tex
@@ -3,7 +3,8 @@
 \usepackage{color}
 \usepackage{enumitem}
 \usepackage{graphicx}
-%\usepackage{hyperref}
+\usepackage{amssymb}
+\usepackage{hyperref}
 
 %----------------------------------------------------------------------------
 
@@ -56,6 +57,7 @@
 This could be a good reference for TOTEM, its RPs, etc.~\cite{totem-jinst}.
 
 \section{Alignment}
+\label{s:alignment}
 
 The alignment proceeds in two stages. In the first stage, the alignment is performed with data from a special low-luminosity calibration fill, where both horizontal and vertical RPs are inserted very close to the beam (about $5\un{\sigma}$). In the second stage, this alignment information is transferred to the standard physics fills with high luminosity and only horizontal RPs inserted.
 
@@ -66,7 +68,7 @@ The first stage employs the standard TOTEM alignment procedure, see e.g.~Section
 \item {\em Absolute alignment wrt.~the beam} is performed with a sample of elastic-scattering events tagged by the vertical RPs. Due to the azimuthal symmetry of the process, the position of the beam can be derived from the observed hit distributions.
 \end{enumerate}
 
-For the second alignment stage, the method relies on the physics being the same both in the calibration and physics fills. Assuming that the LHC settings (optics, collimators, etc.) are the same, too, the hit distribution observed in a physics fill can be aligned/matched to the distribution from the calibration fill. Data used for this matching come from standard CMS triggers which do not use any RP information and are therefore close to zero-bias regarding forward protons. Then, a ``cleaning cut'' is applied in each arm of the spectrometer requiring a correlation between the horizontal hit position in the near and far RP, which is fulfilled by physics tracks originating at the IP. Several metrics of hit-distribution matching have been explored, focusing first on the horizontal alignment essential for $\xi$ reconstruction. An example is shown in Figure \ref{fig:al_matching}, left. The matching procedure has been applied separately to every RP and every fill in order to check for time-dependent effects and control of systematic errors. An example of results is shown in Figure \ref{fig:al_matching}, right. As expected, the difference between results from fills with and without the safety margin is about $0.5\un{mm}$ and within each group the results are compatible with a constant. The uncertainty, dominated by the systematic fill-to-fill differences, is estimated to about $150\un{\mu m}$.
+For the second alignment stage, the method relies on the physics being the same both in the calibration and physics fills. Assuming that the LHC settings (optics, collimators, etc.) are the same, too, the hit distribution observed in a physics fill can be aligned/matched to the distribution from the calibration fill. Data used for this matching come from standard CMS triggers which do not use any RP information and are therefore close to zero-bias regarding forward protons. Then, a ``cleaning cut'' is applied in each arm of the spectrometer requiring a correlation between the horizontal hit position in the near and far RP, which is fulfilled by physics tracks originating at the IP. Several metrics of hit-distribution matching have been explored, focusing first on the horizontal alignment essential for $\xi$ reconstruction. An example is shown in Figure \ref{fig:al_matching}, left. The matching procedure has been applied separately to every RP and every fill in order to check for time-dependent effects and control of systematic errors. An example of results is shown in Figure \ref{fig:al_matching}, right. As expected, the difference between results from fills with and without the safety margin is compatible with $0.5\un{mm}$ and within each group the results are compatible with a constant. The uncertainty, dominated by the systematic fill-to-fill differences, is estimated to about $150\un{\mu m}$.
 
 \begin{figure}[h!]
 \begin{center}
@@ -94,6 +96,17 @@ For the second alignment stage, the method relies on the physics being the same 
 
 \section{Alignment and optics validation}
 \label{s:validataion}
+
+This section presents a simple validation of the alignment and optics calibration, based on the fact that the four RPs, in all fills, measure the same physics, up to the detector effects (acceptance, resolution, etc.). As a reference physics quantity, inclusive $\xi$ spectra will be used after the ``cleaning cut'' introduced in Section \ref{s:alignment}.
+
+\TODO{Not mentioning how $\xi$ reconstructed since it presumably is already at a different place of the article.}
+
+Figure \ref{fig:al_opt_val}, left, shows an event-by-event correlation of $\xi$ values reconstructed in the near and far RP of the left spectrometer arm. As expected, the correlation is very close to the dashed line representing equality of both $\xi$'s.
+
+Figure \ref{fig:al_opt_val}, middle, compares the $\xi$ distributions from several fills but the same RP. Apart from the lower-$\xi$ regions affected by the radiation damage, there is a very good overlap with the thick black histogram originating from the calibration run. This manifests the stability of the calibration procedures.
+
+Figure \ref{fig:al_opt_val}, right, compares the $\xi$ distributions from the same fill but different RPs. Disregarding the region $\xi\gtrsim 0.08$ affected by acceptance limitations, one can observe a very good shape agreement among the histograms from all the four RPs.
+
 
 \begin{figure}[h!]
 \begin{center}
@@ -131,7 +144,7 @@ For the second alignment stage, the method relies on the physics being the same 
 \bibitem{jan_thesis}
 	\Name{J.~Ka\v spar}
 	PhD Thesis, CERN-THESIS-2011-214,
-	{http://cdsweb.cern.ch/record/1441140}.
+	\url{http://cdsweb.cern.ch/record/1441140}.
 
 \end{thebibliography}
 
