Plots using the latest optics.

--- a/2017/note_ctpps_2016_alignment/ctpps_2016_alignment_summary.tex
+++ b/2017/note_ctpps_2016_alignment/ctpps_2016_alignment_summary.tex
@@ -49,7 +49,7 @@
 
 \begin{document}
 
-\centerline{version 0-pre}
+\centerline{version 1} % sent on 5 Jan 2017
 \vskip2cm
 
 %----------------------------------------------------------------------------------------------------
@@ -105,7 +105,7 @@ Figure \ref{fig:al_opt_val}, left, shows an event-by-event correlation of $\xi$ 
 
 Figure \ref{fig:al_opt_val}, middle, compares the $\xi$ distributions from several fills but the same RP. Apart from the lower-$\xi$ regions affected by the radiation damage, there is a very good overlap with the thick black histogram originating from the calibration run. This manifests the stability of the calibration procedures.
 
-Figure \ref{fig:al_opt_val}, right, compares the $\xi$ distributions from the same fill but different RPs. Disregarding the region $\xi\gtrsim 0.08$ affected by acceptance limitations, one can observe a very good shape agreement among the histograms from all the four RPs.
+Figure \ref{fig:al_opt_val}, right, compares the $\xi$ distributions from the same fill but different RPs. Disregarding the region $\xi\gtrsim 0.08$ affected by acceptance limitations, one can observe a good shape agreement among the histograms from all the four RPs.
 
 
 \begin{figure}[h!]
